--- a/styles-slideshow.css
+++ b/styles-slideshow.css
@@ -1,4 +1,6 @@
-/* Modal Content */
+/* --- styles-modal.css --- */
+/* --- Modal Slideshow Content --- */
+
 .modal-content-slideshow {
 	position: relative;
 	background-color: var(--bg-color-divs);
@@ -22,7 +24,7 @@
 	max-width: 100%;
 	max-height: 100%;
 	width: 100%;
-	overflow: hidden;
+	overflow: hidden	; 
 }
 
 .slide-content {
@@ -31,13 +33,15 @@
 	justify-content: center;
 	padding: 0 0vh 0vh 0vh;
 	height: 90%;
+	padding-right: 15px;
 }
 
 /* Image styling */
 .slide-image {
 	vertical-align: middle;
 	box-shadow: var(--box-shadow);
-	max-width: 60%; /* Restrict image width to 60% */
+	max-width: 55%; /* Restrict image width to 55% */
+	max-height: inherit;
 	object-fit: cover;
 	flex: 1 1 auto; /* Flex-grow to match height with text container */
 }
@@ -47,13 +51,15 @@
 	text-align: center;
 	box-shadow: var(--box-shadow);
 	background-color: #222;
-	padding: 5% 5%;
+	/* padding: 5% 5%; */
 	color: white;
-	max-width: 40%; /* Restrict text width to 40% */
+	max-width: 45%; /* Restrict text width to 45% */
 	margin-left: 2vh; /* Adjust as necessary for spacing */
+	
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
+	
 	flex: 1 1 auto; /* Flex-grow to match height with image */
 }
 
@@ -63,11 +69,7 @@
 	font-size: 2vh;
 	padding: 2vh 6vh;
 	position: absolute;
-
-
-
 }
-
 
 /* Hide the images by default */
 .mySlides1 {
@@ -159,6 +161,7 @@
 		max-height: 100%;
 
 		height: 100%;
+		overflow: auto;
 	}
 	.slide-content {
 		display: flex;
@@ -173,9 +176,9 @@
 	/* Text container styling with center alignment */
 	.caption-container {
 		padding: 5% 5%;
-
 		max-height: 100%;
 		max-width: 100%;
 		margin-left: 0vh; /* Adjust as necessary for spacing */
+
 	}
 }
