--- a/styles-tooltip.css
+++ b/styles-tooltip.css
@@ -25,7 +25,7 @@
     transition: opacity 0.3s;
     font-size: 2vh;
     left: 0; /* Adjust this value */
-    margin-left: 0; /* Remove the negative margin */
+    margin-left: -4rem; /* Remove the negative margin */
 }
 
 /* Tooltip arrow */
