--- a/styles-modal.css
+++ b/styles-modal.css
@@ -274,8 +274,8 @@ img.hover-shadow {
 	/* The original rule is kept for reference, but check if #container base styles suffice */
 }
 
-/* Smaller Screens (Example: Tablets) */ /* --- Mobile Styles (screens <= 768px) --- and (orientation: portrait) and */
-@media screen and (max-width: 768px) {
+/* Smaller Screens (Example: Tablets) (screens <= 768px) or Portrait Mode */
+@media screen and (max-width: 768px), screen and (orientation: portrait) {
 	.hidden-text {
 		padding-left: 0px;
 	}
